@@ -1,3 +1,11 @@
+2021-07-08  Kate Cheney  <katherine_cheney@apple.com>
+
+        Unreviewed iOS build fix after
+        https://trac.webkit.org/changeset/279749/webkit.
+
+        * page/PointerCaptureController.cpp:
+        (WebCore::PointerCaptureController::dispatchEventForTouchAtIndex):
+
 2021-07-08  Yusuke Suzuki  <ysuzuki@apple.com>
 
         Fix StructuredClone for streams to handle BigInt64Array / BigUint64Array
